like boxes z-index fix

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -136,6 +136,8 @@
 .like-boxes {
   width: 640px;
   margin: 0 auto;
+  z-index: 999;
+  position: relative;
 
   .fb-like-box {
     margin-right: 40px;
